--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-goodreads-shelf",
-  "version": "1.1.3",
+  "name": "react-librarything-shelf",
+  "version": "1.0.0",
   "description": "A React widget for displaying a user's public book shelf",
   "main": "dist/index.js",
-  "repository": "https://github.com/kylekarpack/react-goodreads-shelf",
+  "repository": "https://github.com/kylekarpack/react-librarything-shelf",
   "author": "Kyle Karpack <kylekarpack@gmail.com>",
   "license": "MIT",
   "private": false,
