--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react": "^16.8.6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.0"
+    "@babel/runtime": "^7.11.0",
+    "react-modal": "^3.12.1"
   },
   "scripts": {
     "test": "jest",
