Update modal library

--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "webpack-cli": "^3.3.12"
   },
   "peerDependencies": {
-    "react": "^16.8.6"
+    "react": "^17.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.0",
-    "react-modal": "^3.12.1"
+    "reactjs-popup": "^2.0.4"
   },
   "scripts": {
     "test": "jest",
