--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-storysource": "^6.0.28",
     "@storybook/addons": "^6.0.28",
     "@storybook/react": "^6.0.28",
+    "@storybook/storybook-deployer": "^2.8.7",
     "@types/jest": "^24.9.1",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
@@ -44,12 +45,12 @@
     "webpack-cli": "^3.3.12"
   },
   "peerDependencies": {
-		"react": "^17.0.0",
-		"react-dom": "^17.0.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "dependencies": {
-		"@babel/runtime": "^7.11.0",
-		"reactjs-popup": "^2.0.4"
+    "@babel/runtime": "^7.11.0",
+    "reactjs-popup": "^2.0.4"
   },
   "scripts": {
     "test": "jest",
@@ -57,6 +58,7 @@
     "build": "webpack  --mode production",
     "prepublish": "yarn build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o docs-build"
+    "build-storybook": "build-storybook -o docs-build",
+    "deploy-storybook": "npm run deploy-storybook -- --ci --host-token-env-variable=GITHUB_TOKEN"
   }
 }
