--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@storybook/addon-storysource": "^6.0.28",
     "@storybook/addons": "^6.0.28",
     "@storybook/react": "^6.0.28",
-    "@storybook/storybook-deployer": "^2.8.7",
     "@types/jest": "^24.9.1",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
@@ -58,7 +57,6 @@
     "build": "webpack  --mode production",
     "prepublish": "yarn build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o docs-build",
-    "deploy-storybook": "npm run deploy-storybook -- --ci --host-token-env-variable=GITHUB_TOKEN"
+    "build-storybook": "build-storybook -o docs-build"
   }
 }
