--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,5 +1,7 @@
 name: Build and Deploy Storybook
-on: [push]
+on: 
+  push:
+    paths: ["stories/**", "src/components/**"] # Trigger the action only when files change in the folders defined here
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
